samples/_failures_safe/1761603819_ee0766_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d4ba1c05.c: In function ‘main’:
./samples/SAFE/__tmp_d4ba1c05.c:153:20: error: missing terminating " character
  153 |             printf("Failed to add edge.\
      |                    ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d4ba1c05.c:153:13: error: expected expression at end of input
  153 |             printf("Failed to add edge.\
      |             ^~~~~~
./samples/SAFE/__tmp_d4ba1c05.c:153:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d4ba1c05.c:153:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d4ba1c05.c:153:13: error: expected declaration or statement at end of input
